# cks_satsolver-hust

./: 1.res  11（unsatisfied）.res  2.res  3.res  4（unsatisfied）.res  5.res  6.res  basci_satsolver.cpp  cnftosudoku.cpp  defination.h  definition.h  exchange.c  heap.hpp  main.cpp  satsolver.cpp  satsolver.hpp  soudu.cpp  soudu.hpp  sudoku.cnf  sudoku.res  sudokuqt.cpp  sudutocnf.cpp  sudutocnf.hpp  tempCodeRunnerFile.cpp
original_sudoku/: 1.res  10.res  11（unsatisfied）.res  2.res  6.res  main.cpp  sudoku.cnf  sudoku.res  sudutocnf.hpp
qt/: CMakeLists.txt  cnftosudoku.hpp  definition.h  main.cpp  satsolver.hpp  soudu.hpp  实验报告.md  实验报告.tex
qt/qt/: sudoku_gui.cpp  sudoku_gui.hpp
